feat: add worker heartbeat status
